<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black"

            android:title="@string/nav_home" />
        <item
            android:id="@+id/change"
            android:icon="@drawable/ic_notifications_off_black"
            android:title="@string/nav_cancel" />
        <item
            android:id="@+id/calender"
            android:icon="@drawable/ic_calendar"
            android:title="@string/nav_calendar"
            android:visible="false" />

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Service">
        <menu>
            <item
                android:id="@+id/playstore"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_playstore" />
            <item
                android:id="@+id/website"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_website" />
            <item
                android:id="@+id/becomebeta"
                android:icon="@drawable/ic_menu_send"
                android:title="Betatester werden"
                android:visible="false"/>
        </menu>
    </item>

</menu>
